added and styled cards to be filled in later with information from the application

--- a/index.html
+++ b/index.html
@@ -11,12 +11,29 @@
 </head>
 <body>
     <nav id="header">My Team</nav> <!--Header-->
-    
-    <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+    <nav id="card-holder" class="d-flex justify-content-center flex-wrap"> <!--section that all the cards are within-->
+        <div class="card m-3" style="width: 18rem;">
+            <div class="card-header">
+                <p class="name">Name</p>
+                <p class="role">Role</p>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                    content.</p>
+            </div>
         </div>
-      </div>
+    
+        <div class="card m-3" style="width: 18rem;">
+            <div class="card-header">
+                <p class="name">Name</p>
+                <p class="role">Role</p>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                    content.</p>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
