--- a/index.html
+++ b/index.html
@@ -4,34 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Team Profile Generator</title>
 </head>
 <body>
     <nav id="header">My Team</nav> <!--Header-->
 
     <nav id="card-holder" class="d-flex justify-content-center flex-wrap"> <!--section that all the cards are within-->
-        <div class="card m-3" style="width: 18rem;">
+        <div class="manager-card card m-3" style="width: 18rem;">
             <div class="card-header">
                 <p class="name">Name</p>
                 <p class="role">Role</p>
             </div>
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
+                <p class="card-text">ID:</p>
+                <p class="card-text">Email:</p>
+                <p class="card-text">Office Number:</p>
             </div>
         </div>
     
-        <div class="card m-3" style="width: 18rem;">
+        <div class="engingeer-card card m-3" style="width: 18rem;">
             <div class="card-header">
                 <p class="name">Name</p>
                 <p class="role">Role</p>
             </div>
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
+                <p class="card-text">ID:</p>
+                <p class="card-text">Email:</p>
+                <p class="card-text">GitHub:</p>
+            </div>
+        </div>
+
+        <div class="intern-card card m-3" style="width: 18rem;">
+            <div class="card-header">
+                <p class="name">Name</p>
+                <p class="role">Role</p>
+            </div>
+            <div class="card-body">
+                <p class="card-text">ID:</p>
+                <p class="card-text">Email:</p>
+                <p class="card-text">School:</p>
             </div>
         </div>
     </nav>
