added emojis to html based on roles

--- a/output/index.html
+++ b/output/index.html
@@ -16,7 +16,7 @@
         <div class="manager-card card m-3" style="width: 18rem;">
             <div class="card-header">
                 <p class="name">Name</p>
-                <p class="role">Role</p>
+                <p class="role">Role: ☕</p>
             </div>
             <div class="card-body">
                 <p class="card-text">ID:</p>
@@ -28,7 +28,7 @@
         <div class="engingeer-card card m-3" style="width: 18rem;">
             <div class="card-header">
                 <p class="name">Name</p>
-                <p class="role">Role</p>
+                <p class="role">Role: 👓</p>
             </div>
             <div class="card-body">
                 <p class="card-text">ID:</p>
@@ -40,7 +40,7 @@
         <div class="intern-card card m-3" style="width: 18rem;">
             <div class="card-header">
                 <p class="name">Name</p>
-                <p class="role">Role</p>
+                <p class="role">Role: 🎓</p>
             </div>
             <div class="card-body">
                 <p class="card-text">ID:</p>
