added href link to email html

--- a/output/template.html
+++ b/output/template.html
@@ -20,7 +20,7 @@
             </div>
             <div class="card-body">
                 <p class="card-text">ID:</p>
-                <p class="card-text">Email:</p>
+                <p class="card-text">Email: <a href="mailto: test@gmail.com">test@gmail.com</a></p>
                 <p class="card-text">Office Number:</p>
             </div>
         </div>
