in generatehtmlcards.js, the github section now takes the user to the respective github profile on click

--- a/output/template.html
+++ b/output/template.html
@@ -33,7 +33,7 @@
             <div class="card-body">
                 <p class="card-text">ID:</p>
                 <p class="card-text">Email:</p>
-                <p class="card-text">GitHub:</p>
+                <p class="card-text">GitHub: <a href="https://github.com/jarenella">jarenella</a></p>
             </div>
         </div>
 
